fix align stats container order page

--- a/Client/public/css/order.css
+++ b/Client/public/css/order.css
@@ -168,7 +168,7 @@
 
 .search-main-container .stats-card {
     height: 100%;
-    /* padding: 0% 2.5%; */
+    padding: 0% 2.5%;
 }
 
 .search-main-container .statistic-container {
